# Pylang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: generate_config.cmake
include/: CMakeLists.txt  config.h.in
include/pylang/: README.md
include/pylang/IR/: CMakeLists.txt  Pylang.h  PylangAttributes.h  PylangAttributes.td  PylangConstraints.td  PylangDialect.h  PylangDialect.td  PylangOps.h  PylangOps.td  PylangTypes.h  PylangTypes.td
include/pylang/Transforms/: Passes.h  PylangBuiltinFunctionsUtils.h  PylangConversion.h
lib/Dialect/IR/: CMakeLists.txt  PylangAttributes.cpp  PylangDialect.cpp  PylangOps.cpp  PylangTypes.cpp
lib/Dialect/Transforms/: CMakeLists.txt  PylangBuiltinFunctionsUtils.cpp  PylangConversion.cpp
lib/Dialect/Transforms/builtins/: CMakeLists.txt  builtins.h  defs.h  hash.cpp  hash.mlir  print.cpp  print.mlir
test/: CMakeLists.txt
test/builtin/: CMakeLists.txt  builtin.h  check-hash.cpp
test/compiler/: arith_test.py  io_test.py
tools/: CMakeLists.txt
tools/compiler/: CMakeLists.txt  PylangCompiler.cpp  PylangCompiler.h  filegen.py
tools/pylang-opt/: CMakeLists.txt  pylang-opt.cpp
