pybind11_add_module(PylangCompiler PylangCompiler.cpp)
target_link_libraries(PylangCompiler
        PUBLIC
        PylangConversion
        PylangDialect
        fmt::fmt
        MLIRAnalysis
        MLIRBuiltinToLLVMIRTranslation
        MLIRCallInterfaces
        MLIRCastInterfaces
        MLIRExecutionEngine
        MLIRFunctionInterfaces
        MLIRIR
        MLIRLLVMCommonConversion
        MLIRLLVMDialect
        MLIRLLVMToLLVMIRTranslation
        MLIRMemRefDialect
        MLIRParser
        MLIRPass
        MLIRSideEffectInterfaces
        MLIRSupport
        MLIRTargetLLVMIRExport
        MLIRTransforms
        MLIRFuncToLLVM
        MLIRComplexToLLVM
        MLIRComplexToStandard
        MLIRMathToFuncs
        MLIRMathToLLVM
        MLIRMathToLibm
        MLIROpenMPToLLVM
        MLIRBuiltinToLLVMIRTranslation
        MLIRLLVMToLLVMIRTranslation
        MLIRTargetLLVMIRExport
        MLIRVectorToLLVM
        )